deploy/src/objects/MDO_BrandUser__c.object
<CustomObject>
    <description>Junction Object Mdo used to share the right Brands with the right users</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>MDO_Brand__c</referenceTo>
        <relationshipName>Brands_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Level_of_Visibility__c</fullName>
        <label>Level of Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brands_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SWOP Brand User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>User__c</columns>
        <columns>Level_of_Visibility__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BU-{0000}</displayFormat>
        <label>Brand User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOP Brands Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>